instrument is done

--- a/public/views/instruments.html
+++ b/public/views/instruments.html
@@ -101,7 +101,7 @@
                         <tr class="repeat-animation" data-ng-repeat="instrument in Instruments | filter:query">
                             <td>{{instrument.instrument_ID}}</td>
                             <td>{{instrument.name}}</td>
-                            <td>{{instrument.gender}}</td>
+                            <td>{{instrument.Std_ID}}</td>
 
                             <!--<td>{{teacher.phone_number_id}}</td>-->
                             <td><div class="btn-group">
