--- a/public/views/perGroups.html
+++ b/public/views/perGroups.html
@@ -29,103 +29,45 @@
 
 
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="ID">ID <span class="required">*</span>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="ID">Performance Group ID <span class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="ID"  data-ng-model="tID" name="tID"
+                                            <input type="text" id="ID"  data-ng-model="perID" name="perID"
                                                    integer required ng-model-options="{ updateOn: 'blur' }" minlength="7" data-minlength="7" maxlength="7"
                                                    class="form-control col-md-7 col-xs-12">
 
-                                            <span style="color:red" ng-show="form.tID.$error.integer"> *should be a number</span>
-                                            <span style="color:red" ng-show="form.tID.$touched && form.tID.$invalid">
-                                            <span ng-show="form.tID.$error.required">*ID is required.</span>
+                                            <span style="color:red" ng-show="form.perID.$error.integer"> *should be a number</span>
+                                            <span style="color:red" ng-show="form.perID.$touched && form.perID.$invalid">
+                                            <span ng-show="form.perID.$error.required">*ID is required.</span>
                                             </span>
-                                            <span style="color:red" ng-show="form.tID.$error.minlength"> *should be 7 digits</span>
+                                            <span style="color:red" ng-show="form.perID.$error.minlength"> *should be 7 digits</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="fullname">Full Name <span class="required">*</span>
-                                        </label>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Performance Item <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" data-ng-model="name" id="fullname" name="fullname" required class="form-control col-md-7 col-xs-12">
-                                            <span style="color:red" ng-show="form.fullname.$touched && form.fullname.$invalid">
-                                            <span ng-show="form.fullname.$error.required">*name is required.</span>
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender <span class="required">*</span></label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select class="form-control" data-ng-model="tgender" name="sgender" required>
-                                                <option>MALE</option>
-                                                <option>FEMALE</option>
+                                            <select  class="form-control" data-ng-model="Pitem" name="Pitem" required>
+                                                <option data-ng-repeat="item in pItems" value="{{item.course_ID}}"> {{item.title}}</option>
+                                                <!--<option> dummycourse2</option>-->
 
                                             </select>
-                                            <span style="color:red" ng-show="form.sgender.$touched && form.sgender.$invalid">
-                                            <span ng-show="form.sgender.$error.required">*gender is required.</span>
+                                            <span style="color:red" ng-show="form.Pitem.$touched && form.Pitem.$invalid">
+                                            <span ng-show="form.Pitem.$error.required">*course is required.</span>
                                             </span>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Access Level <span class="required">*</span></label>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Practice Session <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select class="form-control" data-ng-model="accLevel" name="accLevel" required>
-                                                <option>Admin</option>
-                                                <option>User</option>
+                                            <select  class="form-control" data-ng-model="pSession" name="pSession" required>
+                                                <option data-ng-repeat="session in Sessions" value="{{item.course_ID}}"> {{item.title}}</option>
+                                                <!--<option> dummycourse2</option>-->
 
                                             </select>
-                                            <span style="color:red" ng-show="form.accLevel.$touched && form.accLevel.$invalid">
-                                            <span ng-show="form.accLevel.$error.required">*Access level is required.</span>
+                                            <span style="color:red" ng-show="form.pSession.$touched && form.pSession.$invalid">
+                                            <span ng-show="form.pSession.$error.required">*course is required.</span>
                                             </span>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="nic">NIC <span class="required">*</span></label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input ng-model-options="{ updateOn: 'blur' }" integer type="text" class="form-control" minlength="9" data-minlength="9" maxlength="9"
-                                                   id="nic" data-ng-model="nic" name="nic" required>
-                                            <span class="form-control-feedback right" aria-hidden="true">V</span>
-                                            <span style="color:red" ng-show="form.nic.$error.integer"> *should be a number</span>
-                                            <span style="color:red" ng-show="form.nic.$touched && form.nic.$invalid">
-                                            <span ng-show="form.nic.$error.required">*NIC is required.</span>
-                                            </span>
-                                            <span style="color:red" ng-show="form.nic.$error.minlength"> *should be 10 digits</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="birthday">Date Of Birth <span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input id="birthday" data-ng-model="dob" name="dob" type="date" class="date-picker form-control col-md-7 col-xs-12" required type="text">
-                                            <span style="color:red" ng-show="form.dob.$touched && form.dob.$invalid">
-                                            <span ng-show="form.dob.$error.required">*Date of Birth is required.</span>
-                                            </span>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Telephone <span class="required">*</span></label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input ng-model-options="{ updateOn: 'blur' }" integer required class="form-control" name="telePhone"
-                                                   data-ng-model="telephone" type="text"
-                                                   placeholder="Telephone" minlength="10" data-minlength="10" maxlength="10">
-                                            <span style="color:red" ng-show="form.telePhone.$error.integer"> *should be a number</span>
-                                            <span style="color:red" ng-show="form.telePhone.$touched && form.telePhone.$invalid">
-                                            <span ng-show="form.telePhone.$error.required">*telephone is required.</span>
-                                            </span>
-                                            <span style="color:red" ng-show="form.telePhone.$error.minlength"> *should be 10 digits</span>
-                                        </div>
-
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Address </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input class="form-control pull-right"
-                                                   data-ng-model="address" type="text" placeholder="Address">
                                         </div>
                                     </div>
 
@@ -137,7 +79,7 @@
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                             <button class="btn btn-success btn-green" type="button"
                                                     data-ng-disabled="!tID || !name || !nic "
-                                                    onclick="resetForm1()" data-ng-click=" addTeacher();" data-dismiss="modal"> Add Teacher</button>
+                                                    onclick="resetForm1()" data-ng-click=" addperGroup();" data-dismiss="modal"> Add Group</button>
                                         </div>
                                     </div>
 
