creating adding perf groups

--- a/public/views/perGroups.html
+++ b/public/views/perGroups.html
@@ -96,7 +96,7 @@
         <div class="x_panel">
             <div class="x_title clearfix">
 
-                <div class="pull-left"> <h5>Registered Teachers ({{Teachers.length}})</h5></div>
+                <div class="pull-left"> <h5>Performance Groups ({{perGroups.length}})</h5></div>
                 <input class="form-control pull-right" data-ng-model="query" type="text" class="form-control empty" id="iconified" placeholder="&#xF002; Search.." style="width: 180px;height: 30px;font-family:Roboto, FontAwesome">
 
             </div>
@@ -116,10 +116,10 @@
                         </thead>
                         <tbody>
                         <tr class="repeat-animation" data-ng-repeat="perGroup in perGroups | filter:query">
-                            <td>{{perGroup.teacher_ID}}</td>
-                            <td>{{perGroup.name}}</td>
-                            <td>{{perGroup.gender}}</td>
-                            <td>{{perGroup.DOB }}</td>
+                            <td>{{perGroup.group_ID}}</td>
+                            <td>{{perGroup.item_name}}</td>
+                            <td>{{perGroup.description}}</td>
+                            <td>{{perGroup.day}} / {{perGroup.time}}</td>
 
                             <td><div class="btn-group">
                                 <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
