--- a/public/views/perGroups.html
+++ b/public/views/perGroups.html
@@ -12,7 +12,7 @@
 
             <!-- Button trigger modal -->
             <button class="btn btn-success btn-green btn-xs" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i>
-                New Teacher
+                New Group
             </button>
 
             <!-- Modal -->
@@ -33,21 +33,21 @@
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input type="text" id="ID"  data-ng-model="perID" name="perID"
-                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="7" data-minlength="7" maxlength="7"
+                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="4" data-minlength="4" maxlength="4"
                                                    class="form-control col-md-7 col-xs-12">
 
                                             <span style="color:red" ng-show="form.perID.$error.integer"> *should be a number</span>
                                             <span style="color:red" ng-show="form.perID.$touched && form.perID.$invalid">
                                             <span ng-show="form.perID.$error.required">*ID is required.</span>
                                             </span>
-                                            <span style="color:red" ng-show="form.perID.$error.minlength"> *should be 7 digits</span>
+                                            <span style="color:red" ng-show="form.perID.$error.minlength"> *should be 4 digits</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Performance Item <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <select  class="form-control" data-ng-model="Pitem" name="Pitem" required>
-                                                <option data-ng-repeat="item in pItems" value="{{item.course_ID}}"> {{item.title}}</option>
+                                                <option data-ng-repeat="item in ItemsList" value="{{item.item_ID}}"> {{item.item_name}}</option>
                                                 <!--<option> dummycourse2</option>-->
 
                                             </select>
@@ -61,12 +61,12 @@
                                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Practice Session <span class="required">*</span></label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <select  class="form-control" data-ng-model="pSession" name="pSession" required>
-                                                <option data-ng-repeat="session in Sessions" value="{{item.course_ID}}"> {{item.title}}</option>
+                                                <option data-ng-repeat="session in Sessions" value="{{session.slot_ID}}"> {{session.day}} / {{session.time}}</option>
                                                 <!--<option> dummycourse2</option>-->
 
                                             </select>
                                             <span style="color:red" ng-show="form.pSession.$touched && form.pSession.$invalid">
-                                            <span ng-show="form.pSession.$error.required">*course is required.</span>
+                                            <span ng-show="form.pSession.$error.required">*session is required.</span>
                                             </span>
                                         </div>
                                     </div>
@@ -78,7 +78,7 @@
 
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                             <button class="btn btn-success btn-green" type="button"
-                                                    data-ng-disabled="!tID || !name || !nic "
+                                                    data-ng-disabled="!perID || !Pitem || !pSession "
                                                     onclick="resetForm1()" data-ng-click=" addperGroup();" data-dismiss="modal"> Add Group</button>
                                         </div>
                                     </div>
@@ -96,7 +96,7 @@
         <div class="x_panel">
             <div class="x_title clearfix">
 
-                <div class="pull-left"> <h5>Performance Groups ({{perGroups.length}})</h5></div>
+                <div class="pull-left"> <h5>Performance Groups ({{perGroupsList.length}})</h5></div>
                 <input class="form-control pull-right" data-ng-model="query" type="text" class="form-control empty" id="iconified" placeholder="&#xF002; Search.." style="width: 180px;height: 30px;font-family:Roboto, FontAwesome">
 
             </div>
@@ -115,7 +115,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr class="repeat-animation" data-ng-repeat="perGroup in perGroups | filter:query">
+                        <tr class="repeat-animation" data-ng-repeat="perGroup in perGroupsList | filter:query">
                             <td>{{perGroup.group_ID}}</td>
                             <td>{{perGroup.item_name}}</td>
                             <td>{{perGroup.description}}</td>
