--- a/public/views/perGroups.html
+++ b/public/views/perGroups.html
@@ -122,86 +122,67 @@
                             <td>{{perGroup.day}} / {{perGroup.time}}</td>
 
                             <td><div class="btn-group">
-                                <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
+
 
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">
-                                    Payment
+                                <button type="button" class="btn btn-info btn-xs" ng-click="getMembers(perGroup.group_ID);" data-toggle="modal" data-target="#myModal2">
+                                    <i class="fa fa-group"></i> Group Members
                                 </button>
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
-                                    <div class="modal-dialog">
+                                    <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel2"> Payment Window</h4>
+                                                <h4 class="modal-title" id="myModalLabel2"> Groups Members</h4>
                                             </div>
                                             <div class="modal-body">
-
-                                                <div class="row" style="padding-left: 15px;">
-                                                    <div class="col-lg-9 col-lg-offset-1 form">
-
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">NIC:</label>
-
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="NatIdentity" type="number" placeholder="NIC" readonly>
-                                                        </div>
-
-                                                        <div class="row" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm"> Amount: </label>
-
-                                                            <div class="from-group input-group" style="padding-left: 1.7cm">
-                                                                <span class="input-group-addon">Rs.</span>
-                                                                <input class="form-control"
-                                                                       style=" height: 35px" data-ng-model="Bal" type="number" placeholder="payment">
-                                                                <span class="input-group-addon">.00 </span>
-
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">Due Date:</label>
+                                                <div class="table-responsive">
+                                                    <div class="table-responsive">
+                                                        <table class="table table-hover">
+                                                            <thead>
+                                                            <tr>
+                                                                <th>ID</th>
+                                                                <th>Name</th>
+                                                                <th>Gender</th>
+                                                                <th>DOB</th>
 
 
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="DuDate" type="date">
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            <tr class="repeat-animation" data-ng-repeat="student in StudentsList | filter:query">
+                                                                <td>{{student.ID}}</td>
+                                                                <td>{{student.name}}</td>
+                                                                <td>{{student.gender}}</td>
+                                                                <td>{{student.DOB }}</td>
 
-                                                        </div>
-
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">Date:</label>
 
 
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="toDate" type="date">
+                                                            </tr>
 
-                                                        </div>
+                                                            </tbody>
+                                                        </table>
 
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">Officer:</label>
 
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="OffName" type="text" placeholder="Officer Name">
-                                                        </div>
-
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
 
                                                     </div>
                                                 </div>
 
                                             </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
-                                                <button type="button" ng-click="trans(NatIdentity,Bal,DuDate,toDate,OffName);" class="btn btn-primary btn-sm" > Done</button>
-                                            </div>
                                         </div>
-                                        <!-- /.modal-content -->
+                                                <!-- /.modal-content -->
                                     </div>
                                     <!-- /.modal-dialog -->
                                 </div>
                                 <!-- /.modal -->
                                 <button type="button" ng-click="deleteMember(member.NIC);" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></button>
                             </div>
+
+
                             </td>
                         </tr>
 
