few changes were done in schema

--- a/public/views/performanceItems.html
+++ b/public/views/performanceItems.html
@@ -12,7 +12,7 @@
 
             <!-- Button trigger modal -->
             <button class="btn btn-success btn-green btn-xs" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i>
-                New Group
+                New Item
             </button>
 
             <!-- Modal -->
@@ -73,7 +73,7 @@
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                             <button class="btn btn-success btn-green" type="button"
                                                     data-ng-disabled="!periID || !itemname || !itemdesc "
-                                                    onclick="resetForm1()" data-ng-click=" addItem();" data-dismiss="modal"> Add Item</button>
+                                                    onclick="resetForm1()" data-ng-click=" addperItem();" data-dismiss="modal"> Add Item</button>
                                         </div>
                                     </div>
 
