add members were partially done

--- a/public/views/perGroups.html
+++ b/public/views/perGroups.html
@@ -123,7 +123,7 @@
 
                             <td><div class="btn-group">
 
-                                <button type="button" ng-click="getMembers(perGroup.group_ID);" data-toggle="modal" data-target="#myModal3" class="btn btn-success btn-green btn-xs"><i class="fa fa-plus"></i> Add Members</button>
+                                <button type="button" ng-click="selectGroup(perGroup.group_ID);" data-toggle="modal" data-target="#myModal3" class="btn btn-success btn-green btn-xs"><i class="fa fa-plus"></i> Add Members</button>
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
                                     <div class="modal-dialog modal-lg">
@@ -161,7 +161,7 @@
                                                                 <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                                                 <button class="btn btn-success btn-green" type="button"
 
-                                                                        onclick="resetForm1()" data-ng-click=" addMembers(perGroup.group_ID);" data-dismiss="modal"> Add Group</button>
+                                                                        onclick="resetForm1()" data-ng-click=" addMembers(perGroup.group_ID);" data-dismiss="modal"> Add Members</button>
                                                             </div>
                                                         </div>
 
